@@ -450,7 +450,7 @@ public class PodcastService {
             if (getEpisodeByUrl(url) == null) {
                 Long length = null;
                 try {
-                    length = new Long(enclosure.getAttributeValue("length"));
+                    length = Long.valueOf(enclosure.getAttributeValue("length"));
                 } catch (Exception x) {
                     LOG.warn("Failed to parse enclosure length.", x);
                 }
@@ -470,13 +470,7 @@ public class PodcastService {
                 long timeA = a.getPublishDate() == null ? 0L : a.getPublishDate().getTime();
                 long timeB = b.getPublishDate() == null ? 0L : b.getPublishDate().getTime();
 
-                if (timeA < timeB) {
-                    return 1;
-                }
-                if (timeA > timeB) {
-                    return -1;
-                }
-                return 0;
+                return Long.compare(timeB, timeA);
             }
         });
 
@@ -698,6 +692,10 @@ public class PodcastService {
     private File getChannelDirectory(PodcastChannel channel) {
         File podcastDir = new File(settingsService.getPodcastFolder());
         File channelDir = new File(podcastDir, StringUtil.fileSystemSafe(channel.getTitle()));
+
+        if (!podcastDir.canWrite()) {
+          throw new RuntimeException("The podcasts directory " + podcastDir + " isn't writeable.");
+        }
 
         if (!channelDir.exists()) {
             boolean ok = channelDir.mkdirs();
